# agent-smith

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  dashboard.html  mcp_server.py  opencode.md  pyproject.toml  sonar-project.properties
.claude/: settings.json
.claude/hooks/: post-compact.sh
.github/workflows/: ci.yml
core/: __init__.py  api_server.py  cost.py  coverage.py  dashboard.py  findings.py  logger.py  session.py
docs/: extending.md  skills.md
examples/: threat-model-payflow-app.html  threat-model-payflow-app.md
installers/: install.sh  install_opencode.sh  opencode-pentest-recovery.mjs  uninstall.sh
mcp_server/: __main__.py  _app.py  http_tools.py  kali_tools.py  report_tools.py  scan_tools.py  session_tools.py
skills/: analyze-cve.md  pentester.md  threat-model.md
skills/aikido-triage/: SKILL.md
skills/gh-export/: SKILL.md
skills/threat-model/: SKILL.md
templates/: dashboard.html
tests/: conftest.py  test_api_server.py  test_cost.py  test_coverage.py  test_docker_runner.py  test_dotenv.py  test_findings.py  test_kali_runner.py  test_kali_tool.py  test_logger.py  test_metasploit_runner.py  test_metasploit_server.py  test_parsers.py  test_rehydrate.py  test_report_tools.py  test_session.py  test_session_tools_helpers.py  test_tool_builders.py
tools/: __init__.py  base.py  docker_runner.py  ffuf.py  fuzzyai.py  httpx.py  kali_runner.py  metasploit_runner.py  naabu.py  nmap.py  nuclei.py  semgrep.py  subfinder.py  trufflehog.py
tools/kali/: Dockerfile  pyrit_runner.py
tools/metasploit/: Dockerfile  server.py
