[tool.poetry]
name = "pentest-agent"
version = "0.2.0"
description = "Claude-orchestrated lightweight penetration testing agent"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = ">=3.9.0"
mcp = ">=1.0.0"
fastapi = {extras = ["standard"], version = ">=0.100.0"}
sentry-sdk = {version = "^2.54.0", optional = true}

[tool.poetry.extras]
monitoring = ["sentry-sdk"]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.23.0"
pytest-cov = ">=5.0.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["core", "tools", "mcp_server"]
omit = ["tools/kali/*", "*/kali_runner.py", "tools/metasploit/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
